@@ -902,10 +902,12 @@ handle_subst_glyphs (CMap *cmap,
         }
 #undef MAX_UNICODES
         if (unicode_count == -1) {
-          if (name)
-            MESG("No Unicode mapping available: GID=%u, name=%s\n", gid, name);
-          else
-            MESG("No Unicode mapping available: GID=%u\n", gid);
+          if(verbose > VERBOSE_LEVEL_MIN) {
+            if (name)
+              MESG("No Unicode mapping available: GID=%u, name=%s\n", gid, name);
+            else
+              MESG("No Unicode mapping available: GID=%u\n", gid);
+          }
         } else {
           /* the Unicode characters go into wbuf[2] and following, in UTF16BE */
           /* we rely on WBUF_SIZE being more than adequate for MAX_UNICODES  */
@@ -1267,7 +1269,7 @@ otf_create_ToUnicode_stream (const char *font_name,
       break;
     }
   }
-  if (cmap_obj == NULL)
+  if (cmap_obj == NULL && verbose > VERBOSE_LEVEL_MIN)
     WARN("Unable to read OpenType/TrueType Unicode cmap table.");
   tt_cmap_release(ttcmap);
   CMap_set_silent(0);
@@ -1871,7 +1873,11 @@ otf_load_Unicode_CMap (const char *map_name, int ttc_index, /* 0 for non-TTC fon
     ttcmap = tt_cmap_read(sfont, 3, 1); /* Microsoft UCS2 */
     if (!ttcmap) {
       ttcmap = tt_cmap_read(sfont, 0, 3); /* Unicode 2.0 or later */
+#if defined(LIBDPX)
+      if (!ttcmap && verbose > VERBOSE_LEVEL_MIN) {
+#else
       if (!ttcmap) {
+#endif /* LIBDPX */
         ERROR("Unable to read OpenType/TrueType Unicode cmap table.");
       }
     }
