@@ -254,7 +254,8 @@ add_ToUnicode (Type0Font *font)
     pdf_add_dict(font->fontdict,
                  pdf_new_name("ToUnicode"), tounicode);
   } else {
-    WARN("Failed to load ToUnicode CMap for font \"%s\"", fontname);
+    if (__verbose)
+      WARN("Failed to load ToUnicode CMap for font \"%s\"", fontname);
   }
 
   return;
